chore: Update package name and author information

--- a/packages/react-tweet/package.json
+++ b/packages/react-tweet/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-tweet",
-  "version": "3.2.1",
-  "repository": "https://github.com/vercel-labs/react-tweet.git",
-  "author": "Luis Alvarez (https://twitter.com/luis_fades)",
+  "name": "react-tweet-cjlumley",
+  "version": "1.0",
+  "repository": "https://github.com/cjlumley/react-tweet.git",
+  "author": "Cjlumley",
   "scripts": {
     "build": "pnpm build:swc && pnpm types",
     "build:swc": "swc src -d dist --copy-files",
