--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "repository": "https://github.com/vercel-labs/react-tweet.git",
+  "repository": "https://github.com/cjlumley/react-tweet.git",
   "license": "MIT",
-  "private": true,
-  "author": "Luis Alvarez (https://twitter.com/luis_fades)",
+  "private": false,
+  "author": "Cjlumley",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
