--- a/packages/react-tweet/package.json
+++ b/packages/react-tweet/package.json
@@ -1,8 +1,16 @@
 {
   "name": "react-tweet-cjlumley",
   "version": "1.0.0",
-  "repository": "https://github.com/cjlumley/react-tweet.git",
+  "description": "A custom version of the react-tweet package",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cjlumley/react-tweet.git"
+  },
   "author": "Cjlumley",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cjlumley/react-tweet/issues"
+  },
   "scripts": {
     "build": "pnpm build:swc && pnpm types",
     "build:swc": "swc src -d dist --copy-files",
@@ -10,10 +18,6 @@
     "types": "tsc --emitDeclarationOnly",
     "lint": "TIMING=1 eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix",
     "clean": "rm -rf dist && rm -rf .turbo"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/vercel-labs/react-tweet/issues"
   },
   "sideEffects": [
     "./dist/twitter-theme/tweet-container.js"
@@ -42,18 +46,7 @@
     }
   },
   "publishConfig": {
-    "access": "public",
-    "typesVersions": {
-      "*": {
-        "index": [
-          "dist/index.d.ts"
-        ],
-        "api": [
-          "dist/api/index.d.ts"
-        ],
-        "*": []
-      }
-    }
+    "access": "public"
   },
   "peerDependencies": {
     "react": ">= 18.0.0",
